[project]
name = "lisa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.1.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.47",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
]

[tool.basedpyright]
typeCheckingMode = "standard" # or "strict", "basic"
# Example: Override specific diagnostic rules
reportUnusedImport = "warning"
# Example: Define execution environments for complex layouts
extraPaths = ["."]
